@@ -52,7 +52,10 @@ typedef struct {
 	HashTable tmp_function_table;
 	HashTable tmp_class_table;
 	HashTable tmp_auto_globals;
+	Bucket    *tmp_internal_function_tail;
+	Bucket    *tmp_internal_class_tail;
 } xc_sandbox_t;
 
+void xc_zend_class_add_ref(zend_class_entry ZESW(*ce, **ce));
 xc_sandbox_t *xc_sandbox_init(xc_sandbox_t *sandbox, char *filename TSRMLS_DC);
 void xc_sandbox_free(xc_sandbox_t *sandbox, int install TSRMLS_DC);
